Responsive look good

--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,7 @@ body {
     padding: 0;
     font-family: 'Raleway', sans-serif;
     color: #000;
+    overflow-x: hidden;
 }
 
 section {
@@ -510,7 +511,7 @@ body,
 .verticaly button {
     position: absolute;
     bottom: 40px;
-    left: 40px;
+    left: 30px;
     border: hidden;
     background-color: inherit;
     color: #fff;
@@ -1035,6 +1036,21 @@ and (min-width: 320px) and (max-width: 480px) {
         height: 440px;
     }
 
+    .menu h1 {
+        position: absolute;
+        right: 100px;
+        top: 195px;
+        font-size: 36px;
+    }
+
+    .menu p {
+        position: absolute;
+        right: 0px;
+        top: 195px;
+        max-width: 205px;
+        font-size: 30px;
+    }
+
     .float-left img {
         width: 70%;
     }
@@ -1158,8 +1174,13 @@ and (min-width: 320px) and (max-width: 480px) {
         width: 100%;
     }
 
+    .reason .row {
+        margin-top: 65px;
+    }
+
     .reason h1 {
         font-size: 30px;
+        padding-top: 50px;
     }
 
     .reason h2 {
@@ -1173,16 +1194,20 @@ and (min-width: 320px) and (max-width: 480px) {
 
     .reason .col-md-6 {
         border: 1px solid #eae9e7;
-        width: 290px;
+        width: 310px;
         height: 290px;
-        margin-left: 25px;
+        margin-left: 7px;
     }
 
     .reason button {
-        margin-left: 17px;
+        margin-left: 15px;
+        margin-top: 55px;
     }
 
     /* FORTH */
+    .forth {
+        margin-top: 80px;
+    }
     .forth h1 {
         font-size: 30px;
         width: 332px;
@@ -1195,11 +1220,12 @@ and (min-width: 320px) and (max-width: 480px) {
     /* BUY-POSTERS */
     .buy-posters {
         background-color: #f2f4f5;
-        height: 1725px;
+        height: 1590px;
     }
 
     .buy-posters h1 {
         font-size: 35px;
+        margin-top: 60px;
     }
 
     .buy-posters img {
@@ -1311,9 +1337,9 @@ and (min-width: 320px) and (max-width: 480px) {
     }
 
     .buy-posters .right1 {
-        margin-top: 50px;
-        height: 334px;
-        width: 335px;
+        margin-top: 40px;
+        height: 335px;
+        width: 336px;
     }
 
     .buy-posters .right1 button {
@@ -1332,6 +1358,10 @@ and (min-width: 320px) and (max-width: 480px) {
 
     .buy-posters .col-md-12 {
         float: left;
+    }
+
+    .buy-posters .col-md-12 button {
+        margin-top: 40px;
     }
 
     /* FOOTER */
