--- a/css/style.css
+++ b/css/style.css
@@ -32,6 +32,22 @@ section {
     z-index: 9999;
 }
 
+.carousel-control .glyphicon-chevron-right, .carousel-control .icon-next {
+    display: none;
+}
+
+.carousel-control .glyphicon-chevron-left, .carousel-control .icon-prev {
+    display: none;
+}
+
+.carousel-control.right {
+    background-image: none;
+}
+
+.carousel-control.left {
+    background-image: none;
+}
+
 .hg-wd a {
     font-weight: 600;
     color: #626262 !important;
@@ -1040,6 +1056,22 @@ and (min-width: 320px) and (max-width: 480px) {
         height: 320px;
     }
 
+    .carousel-control .glyphicon-chevron-right, .carousel-control .icon-next {
+        display: inherit;
+    }
+
+    .carousel-control .glyphicon-chevron-left, .carousel-control .icon-prev {
+        display: inherit;
+    }
+
+    .carousel-control.right {
+        background-image: none;
+    }
+
+    .carousel-control.left {
+        background-image: none;
+    }
+
     .menu h1 {
         position: absolute;
         right: 100px;
@@ -1243,12 +1275,15 @@ and (min-width: 320px) and (max-width: 480px) {
     .reason .border1 {
         border-bottom: none;
     }
+
     .reason .border2 {
         border-bottom: none;
     }
+
     .reason .border3 {
         border-bottom: none;
     }
+
     .reason button {
         margin-left: 15px;
         margin-top: 55px;
@@ -1377,15 +1412,19 @@ and (min-width: 320px) and (max-width: 480px) {
         width: 337px;
         margin-bottom: 20px;
     }
+
     .buy-posters .right1 .img {
         margin-left: 0;
     }
+
     .buy-posters .left1 .img {
         margin-left: 0;
     }
+
     .buy-posters .horizontaly .img {
         margin-left: 0;
     }
+
     .buy-posters .verticaly .img {
         margin-left: 0;
     }
@@ -1494,6 +1533,7 @@ and (min-width: 320px) and (max-width: 480px) {
         margin-top: 20px;
         margin-left: 20px;
     }
+
     .last-footer a {
         color: #d5d5d3;
         text-decoration: none;
