--- a/css/style.css
+++ b/css/style.css
@@ -1255,6 +1255,7 @@ and (min-width: 320px) and (max-width: 480px) {
     }
 
     .slick-dots {
+        bottom: 0;
         top: 610px;
         left: 125px;
     }
